fixed input dark mode UI

--- a/src/components/shared/components/modal/modal.css
+++ b/src/components/shared/components/modal/modal.css
@@ -24,7 +24,7 @@
 
 .modal__content {
   padding: 1rem 0.5rem;
-   color: #333;
+  color: var(--text-color);
 }
 
 .modal__footer {
